grammar
# Lines starting with # are comments

# CAPITALIZED_ITEMS are regular expressions

Expression => LogicalXor

LogicalXor => LogicalOr ( 'xor' LogicalOr )*

LogicalOr => LogicalAnd ( 'or' LogicalAnd )*

LogicalAnd => BitwiseOr ( 'and' BitwiseOr )*

BitwiseOr => BitwiseXor ( '|' BitwiseXor )*

BitwiseXor => BitwiseAnd ( '^' BitwiseAnd )*

BitwiseAnd => Equality ( '&' Equality )*

Equality => Comparison ( ( '!=' | '==' ) Comparison )*

Comparison => Shift ( ( '>' | '>=' | '<' | '<=' ) Shift )*

Shift => Term ( ( '>>' | '<<' ) Term )*

Term => Factor ( ( '-' | '+' ) Factor )*

Factor => Exponential ( ( '*' | '/' | '//' | '%' ) Exponential )*

Exponential => Unary ( '**' Unary )*

Unary => ( ( '!' | '-' | '+' | '~' ) Unary ) | Primary

Primary => '(' Expression ')' | Literal

Literal => Void | Boolean | Number | STRING

Void => 'void'

Boolean => 'true' | 'false'

Number => INTEGER | FLOAT
